# pythonplot.com

./: .gitignore  .travis.yml  CLAUDE.md  Examples.ipynb  Generate Page.ipynb  INTRO.md  LICENSE  MIGRATION_NOTES.md  MODERNIZATION_SUMMARY.md  Makefile  README.md  TESTING_CHECKLIST.md  environment.yml  ggplot vs Python Plotting.ipynb  netlify.toml  netlify_deploy.sh  output.ipynb  pyproject.toml  render.py  requirements.txt  setup.R  setup_r.sh  tom's feedback.md
.github/workflows/: deploy.yml
.travis/: authenticate_plotly.py  cloudfront_invalidate.py  install_conda.sh  invalidate_cloudfront.py  orca  reset_cloudfront_cache.sh  setup.R
templates/: t_index.html
tests/: test_plots.py
web/: index.html  t_index.html
web/css/: custom.css
web/img/: cover.psd
